--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,7 +8,7 @@ includes_dir: "./jekyll/includes"
 data_dir:     "./jekyll/data"
 plugins_dir:  "./jekyll/plugins"
 
-baseurl: "documents/"
+baseurl: "/documents"
 
 title: Chun-Ge Documents
 description: May the power of CHUN be with you.
